--- a/staticstyle.css
+++ b/staticstyle.css
@@ -117,7 +117,7 @@ section {
     border: none;
 }
 
-article.book{
+section.book{
     border: 2px solid gainsboro;
     padding: 10px;
     margin-bottom: 2em;
