--- a/myBooks_flex.css
+++ b/myBooks_flex.css
@@ -116,7 +116,8 @@ body {
 #link-cerrar-popup{
     color: black;
     text-decoration: none;
-    font-size: small;
+    border: 1px solid #228B22;
+    padding: 2px 6px 2px 6px;
 }
 #link-cerrar-popup:hover {
     color: #228B22;
