--- a/myBooks_flex.css
+++ b/myBooks_flex.css
@@ -20,6 +20,11 @@ h1 {
 body {
     font-family: "Roboto Light", sans-serif;
 }
+html, body {
+    height: 100%;
+    margin: 0;
+    padding: 0;
+}
 .container{
     margin-left: 200px;
     padding: 1px 16px;
