--- a/myBooks_flex.css
+++ b/myBooks_flex.css
@@ -1,7 +1,7 @@
 h1 {
     text-align: center;
     width: 80%;
-    margin-left: 16%;
+    margin-left: 10%;
     margin-right: 15%;
     color: #228B22;
     font-family: "Roboto Light", sans-serif;
@@ -10,7 +10,7 @@ h1 {
 #info{
     width: 80%;
     padding: 10px;
-    margin-left: 16%;
+    margin-left: 10%;
     margin-right: 15%;
     color: white;
     text-align: center;
@@ -72,7 +72,7 @@ html, body {
 
 /* Active/current link */
 .sidebar a.active {
-    background-color: #4CAF50;
+    background-color: #228B22;
     color: white;
 }
 
